--- a/src/styles/components/node.scss
+++ b/src/styles/components/node.scss
@@ -1,7 +1,7 @@
 :root {
-  --node-base-size: 180px;
+  --base-node-size: 180px;
   @include breakpoint('full') {
-    --node-base-size: 200px;
+    --base-node-size: 200px;
   }
 }
 
@@ -22,7 +22,7 @@
   position: relative;
   overflow:visible;
   margin: 0;
-  font-size: var(--node-base-size);
+  font-size: var(--base-node-size);
   width: 1em;
   height: 1em;
   filter: drop-shadow(0 4px 0 transparentize(palette('dark-background'), .25));
