--- a/src/styles/global/_default.scss
+++ b/src/styles/global/_default.scss
@@ -15,8 +15,8 @@ $export-ui-classes: true !default;
 
 // Default Breakpoint Settings
 // =============================================================================
-@include breakpoint-set(small, 'min-aspect-ratio: 16/9');
-@include breakpoint-set(full, 'min-aspect-ratio: 16/9');
+@include breakpoint-set('small', 'max-aspect-ratio: 1.6');
+@include breakpoint-set('full', 'min-aspect-ratio: 1.6');
 @include breakpoint-classes(hide) {
   display: none;
 }
@@ -28,25 +28,58 @@ $export-ui-classes: true !default;
 // Default Copy Typography Sizes
 // =============================================================================
 
-$line-height-base: 1.5 !default;
+$base-line-height: 1.5;
+$netcanvas-font-stack: 'Quicksand', 'Open Sans', sans-serif;
+$system-font-stack: 'system-ui', sans-serif;
 
-$display-font-family: 'Quicksand', 'Open Sans', sans-serif;
-$system-font-family: 'system-ui', sans-serif;
+:root {
+  --base-font-size: 18px;
+  --heading-font-family: $netcanvas-font-stack;
+  --body-font-family: $system-font-stack;
+}
 
-$netcanvas-font-family: $system-font-family !default;
-$netcanvas-font-size: 18px;
+html {
+  font-family: var(--body-font-family);
+  font-size: var(--base-font-size);
+}
 
-$headings-primary-font-family: $display-font-family !default;
-$headings-font-family: inherit !default;
+// Headings
+
 $headings-font-weight: 400 !default;
 $headings-line-height: 1.1 !default;
+
+// Based of px sizes in style guide (em values were inconsistent)
+$headings: (
+  h1: (1.75rem, var(--heading-font-family)),
+  h2: (1.25rem, var(--heading-font-family)),
+  h3: (1.0625rem, var(--heading-font-family)),
+  h4: (1rem, var(--heading-font-family)),
+  h5: (.75rem, var(--heading-font-family)),
+);
+
+@mixin text($font-size, $font-family) {
+  font-family: $font-family;
+  font-size: $font-size;
+  font-weight: $headings-font-weight;
+  letter-spacing: .05rem;
+  line-height: $headings-line-height;
+}
+
+@each $heading-tag, $heading-properties in $headings {
+  #{$heading-tag} {
+    $font-size: nth($heading-properties, 1);
+    $font-family: nth($heading-properties, 2);
+
+    @include text($font-size, $font-family);
+  }
+}
 
 @include type-set(
   'quicksand', base,
   (
-    font-family: $display-font-family,
+    font-family: var(--heading-font-family),
     font-size: 16px,
-    line-height: $line-height-base,
+    line-height: $base-line-height,
     font-weight: $headings-font-weight
   )
 );
@@ -66,7 +99,7 @@ $headings-line-height: 1.1 !default;
 @include type-set(
   'main-title', base,
   (
-    font-family: $headings-primary-font-family,
+    font-family: var(--heading-font-family),
     font-size: 45px,
     line-height: 1.429,
     font-weight: 700,
@@ -77,7 +110,7 @@ $headings-line-height: 1.1 !default;
 @include type-set(
   'title-1', base,
   (
-    font-family: $headings-primary-font-family,
+    font-family: var(--heading-font-family),
     font-size: 32px,
     line-height: 1.429,
     font-weight: 700,
@@ -93,7 +126,7 @@ $headings-line-height: 1.1 !default;
   'title-2', base,
   (
     font-size: 20px,
-    line-height: $line-height-base,
+    line-height: $base-line-height,
     font-weight: 500,
   )
 );
@@ -103,7 +136,7 @@ $headings-line-height: 1.1 !default;
   'title-3', base,
   (
     font-size: 17px,
-    line-height: $line-height-base,
+    line-height: $base-line-height,
     font-weight: $headings-font-weight,
     text-align: center,
   )
@@ -113,7 +146,7 @@ $headings-line-height: 1.1 !default;
   'title-4', base,
   (
     font-size: 16px,
-    line-height: $line-height-base,
+    line-height: $base-line-height,
   )
 );
 // H5 - Small nodes, context bins, number counter, form field label
@@ -121,7 +154,7 @@ $headings-line-height: 1.1 !default;
   'title-5', base,
   (
     font-size: 12px,
-    line-height: $line-height-base,
+    line-height: $base-line-height,
   )
 );
 
@@ -130,21 +163,21 @@ $headings-line-height: 1.1 !default;
   'copy-large', base,
   (
     font-size: 18px,
-    line-height: $line-height-base
+    line-height: $base-line-height
   )
 );
 @include type-set(
   'copy-standard', base,
   (
     font-size: 16px,
-    line-height: $line-height-base
+    line-height: $base-line-height
   )
 );
 @include type-set(
   'copy-small', base,
   (
     font-size: 12px,
-    line-height: $line-height-base,
+    line-height: $base-line-height,
     font-weight: 100
   )
 );
@@ -153,37 +186,4 @@ $headings-line-height: 1.1 !default;
   @include normalize;
   @include typography-classes;
   @include grid-classes;
-}
-
-html {
-  font-family: $netcanvas-font-family;
-  font-size: $netcanvas-font-size;
-}
-
-// Headings
-
-// Based of px sizes in style guide (em values were inconsistent)
-$headings: (
-  h1: (1.75rem, $headings-primary-font-family),
-  h2: (1.25rem, $headings-font-family),
-  h3: (1.0625rem, $headings-font-family),
-  h4: (1rem, $headings-font-family),
-  h5: (.75rem, $headings-font-family),
-);
-
-@mixin text($font-size, $font-family) {
-  font-family: $font-family;
-  font-size: $font-size;
-  font-weight: $headings-font-weight;
-  letter-spacing: .05rem;
-  line-height: $headings-line-height;
-}
-
-@each $heading-tag, $heading-properties in $headings {
-  #{$heading-tag} {
-    $font-size: nth($heading-properties, 1);
-    $font-family: nth($heading-properties, 2);
-
-    @include text($font-size, $font-family);
-  }
 }
