--- a/src/styles/components/spinner.scss
+++ b/src/styles/components/spinner.scss
@@ -1,10 +1,11 @@
 
 $light-color-list: (color('sea-serpent'), color('mustard'), color('neon-coral'), color('sea-green'));
+$dark-color-list: (color('sea-serpent--dark'), color('mustard--dark'), color('neon-coral--dark'), color('sea-green--dark'));
 
 .spinner {
   --circle-size: 20px;
   --container-size: calc(var(--circle-size) * 3);
-  --animation-duration: 1.5s;
+  --animation-duration: 2s;
 
   &--small {
     --circle-size: 10px;
@@ -17,7 +18,7 @@ $light-color-list: (color('sea-serpent'), color('mustard'), color('neon-coral'),
   width: var(--container-size);
   height: var(--container-size);
   margin: var(--circle-size);
-  animation: spin var(--animation-duration) var(--animation-default-easing) infinite;
+  animation: spin var(--animation-duration) ease-in-out infinite;
   transform: rotate(45deg);
 
   .circle {
@@ -67,6 +68,7 @@ $light-color-list: (color('sea-serpent'), color('mustard'), color('neon-coral'),
     @keyframes circle-color-#{$color-index} {
       0% {
         transform: translateX(var(--circle-size));
+        background: nth($dark-color-list, $color-index);
       }
       100% {
         trasform: translateX(0px);
@@ -77,12 +79,8 @@ $light-color-list: (color('sea-serpent'), color('mustard'), color('neon-coral'),
     .circle {
       &:nth-child(#{$color-index}) {
         :nth-child(1) {
-          background: linear-gradient(
-            to top,
-            rgba(0, 0, 0, 0.1),
-            rgba(0, 0, 0, 0.1)
-          ) $color;
-          animation: circle-color-#{$color-index} calc(var(--animation-duration) / 2) cubic-bezier(0.77, 0, 0.175, 1) alternate infinite;
+          background: nth($dark-color-list, $color-index);
+          animation: circle-color-#{$color-index} calc(var(--animation-duration) / 2) ease-in-out alternate infinite;
         }
         :nth-child(2) {
           background: $color;
@@ -98,7 +96,7 @@ $light-color-list: (color('sea-serpent'), color('mustard'), color('neon-coral'),
     transform: rotate(45deg) scale(1);
   }
 
-  40% {
+  30% {
     transform: rotate(45deg) scale(0.8);
   }
   100% {
