--- a/src/styles/global/core/_animation.scss
+++ b/src/styles/global/core/_animation.scss
@@ -1,25 +1,17 @@
-// NOTE: These values should be manually synchronized with ./src/components/animation.js!
+
+$animation-default-scale-factor: 1;
+$animation-easing-ios: cubic-bezier(.23, 1, .32, 1);
+$animation-easing-android: cubic-bezier(.4, 0, .2, 1);
 
 :root {
-  // Scale factor
-  --animation-default-scale-factor: 1;
-
-  // Durations
-  --animation-fast-duration: calc(var(--animation-default-scale-factor) * 300ms);
-  --animation-standard-duration: calc(var(--animation-default-scale-factor) * 500ms);
-  --animation-slow-duration: calc(var(--animation-default-scale-factor) * 1s);
-
-  // Curves
-  --animation-ios-easing: cubic-bezier(.23, 1, .32, 1);
-  --animation-android-easing: cubic-bezier(.4, 0, .2, 1);
-
-  --animation-default-easing: var(--animation-android-easing);
-
+  --animation-scale-factor: $animation-default-scale-factor;
+  --animation-duration-fast: calc(var(--animation-scale-factor) * 0.3);
+  --animation-duration-standard: calc(var(--animation-scale-factor) * 0.5);
+  --animation-duration-slow: calc(var(--animation-scale-factor) * 1s);
+  --animation-easing: $animation-easing-android;
 }
 
-
 // Preset animations **********************************************************/
-
 @keyframes zoom {
   0% {
     transform: scale(0, 0);
@@ -53,8 +45,8 @@
 
 @mixin animation($animation-name) {
   animation-name: $animation-name;
-  animation-duration: var(--animation-standard-duration);
-  animation-timing-function: var(--animation-default-easing);
+  animation-duration: var(--animation-duration-standard);
+  animation-timing-function: var(--animation-easing);
   animation-delay: 0ms;
   animation-iteration-count: 1;
 }
@@ -75,7 +67,6 @@ $transition-presets: (
 );
 
 // Animation helpers **********************************************************/
-
 @mixin transition-properties($properties, $easing, $duration) {
   $transitions: ();
   @each $value in $properties {
@@ -110,7 +101,7 @@ $transition-presets: (
   }
 }
 
-@mixin group-transition($transition-name, $duration: var(--animation-standard-duration)) {
+@mixin group-transition($transition-name, $duration: var(--animation-duration-standard)) {
   $transition: map-get($transition-presets, $transition-name);
   $properties: map-keys(map-get($transition, 'start'));
 
@@ -123,7 +114,7 @@ $transition-presets: (
 
     &-active {
 
-      @include transition-properties($properties, var(--animation-default-easing), $duration);
+      @include transition-properties($properties, var(--animation-easing), $duration);
       @each $key, $value in map-get($transition, 'end') {
         #{$key}: $value;
       }
@@ -137,7 +128,7 @@ $transition-presets: (
 
 
     &-active {
-      @include transition-properties($properties, var(--animation-default-easing), $duration);
+      @include transition-properties($properties, var(--animation-easing), $duration);
       @each $key, $value in map-get($transition, 'start') {
         #{$key}: $value;
       }
@@ -155,7 +146,7 @@ $transition-presets: (
     }
 
     &-active {
-      @include transition-properties-with-delay($properties, var(--animation-default-easing), $duration, $delay);
+      @include transition-properties-with-delay($properties, var(--animation-easing), $duration, $delay);
       @each $key, $value in map-get($transition, 'end') {
         #{$key}: $value;
       }
@@ -168,7 +159,7 @@ $transition-presets: (
     }
 
     &-active {
-      @include transition-properties-with-delay($properties, var(--animation-default-easing), $duration, $delay);
+      @include transition-properties-with-delay($properties, var(--animation-easing), $duration, $delay);
       @each $key, $value in map-get($transition, 'end') {
         #{$key}: $value;
       }
@@ -181,7 +172,7 @@ $transition-presets: (
     }
 
     &-active {
-      @include transition-properties($properties, var(--animation-default-easing), $duration);
+      @include transition-properties($properties, var(--animation-easing), $duration);
       @each $key, $value in map-get($transition, 'start') {
         #{$key}: $value;
       }
